[package]
name = "clinews"
version = "0.1.0"
edition = "2021"
description = "An CLI application."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.2"
dotenv = "0.15.0"
newsapi = {path = "./newsapi"}
colour = "0.6.0"

termimad = "0.20.1"
cargo = "0.62.0"
bundle = "0.1.0"

[dependencies.sdl2]
features = ["use_mac_framework"]
version = "0.35"

[package.metadata.bundle]
name = "CLIApplication"
identifier = "smorsas/CLIApplication"
version = "1.0.0"
copyright = "MIT."
category = "News"
short_description = "An CLI application."

osx_frameworks = ["SDL2"]


